:wheelchair: all done lets  :dart: shoot the shot :wheelchair:

--- a/template/app.html
+++ b/template/app.html
@@ -25,7 +25,7 @@
     window.addEventListener('load', function(ev) {
       _flutter.loader.load({
         serviceWorker: {
-          serviceWorkerVersion: serviceWorkerVersion,
+          serviceWorkerVersion: null,
         },
         onEntrypointLoaded: async function(engineInitializer) {
           let appRunner = await engineInitializer.initializeEngine();
