:truck: building :rocket:  website :arrow_up:

--- a/template/app.html
+++ b/template/app.html
@@ -2,23 +2,23 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <base href="/static/">
+  <base href="/static/app/">
   <meta charset="UTF-8">
   <meta content="IE=Edge" http-equiv="X-UA-Compatible">
   <meta name="description" content="A new Flutter project.">
   <meta name="apple-mobile-web-app-capable" content="yes">
   <meta name="apple-mobile-web-app-status-bar-style" content="black">
   <meta name="apple-mobile-web-app-title" content="tasks">
-  <link rel="apple-touch-icon" href="{% static 'icons/Icon-192.png' %}">
-  <link rel="icon" type="image/png" href="{% static 'favicon.png' %}"/>
+  <link rel="apple-touch-icon" href="{% static 'app/icons/Icon-192.png' %}">
+  <link rel="icon" type="image/png" href="{% static 'app/favicon.png' %}"/>
   <title>tasks</title>
-  <link rel="manifest" href="{% static 'manifest.json' %}">
-  <link rel="stylesheet" href="{% static 'styles.css' %}">
+  <link rel="manifest" href="{% static 'app/manifest.json' %}">
+  <link rel="stylesheet" href="{% static 'app/styles.css' %}">
 </head>
 <body>
-  <script src="{% static 'flutter_bootstrap.js' %}" async></script>
+  <script src="{% static 'app/flutter_bootstrap.js' %}" async></script>
   <div class="loading-container">
-    <img src="{% static 'logo.png' %}" alt="Logo" class="logo">
+    <img src="{% static 'app/logo.png' %}" alt="Logo" class="logo">
     <div class="loading-text">Loading<span class="dots"></span></div>
   </div>
   <script>
