--- a/static/home.css
+++ b/static/home.css
@@ -80,6 +80,11 @@ body {
   padding-left: 20px;
 }
 
+a{
+  text-decoration: none;
+  color: #00faff;
+}
+
 @media screen and (min-width: 768px) {
   .content.active {
     width: 60vw;
@@ -88,5 +93,23 @@ body {
     align-items: center;
     justify-content: center;
     margin: auto;
+  }
+  ::-webkit-scrollbar {
+    width: 10px;
+    height: 12px;
+  }
+  
+  ::-webkit-scrollbar-track {
+    background: transparent;
+    border-radius: 10px;
+  }
+  
+  ::-webkit-scrollbar-thumb {
+    background: #888;
+    border-radius: 10px;
+  }
+  
+  ::-webkit-scrollbar-thumb:hover {
+    background: #555;
   }
 }
