:goal_net: getting rea :construction_worker: dy to launch :clown_face:

--- a/template/home.html
+++ b/template/home.html
@@ -10,7 +10,7 @@
       <meta property="og:title" content="Pic Quest">
       <meta property="og:description" content="Train Our AI by Completing Engaging Image Tasks – Earn Rewards and Shape the Future of Intelligent Technology!">
       <meta property="og:image" content="{% static 'app/logo.png' %}">
-      <meta property="og:url" content="https://picquest.com">
+      <meta property="og:url" content="https://picquest.online">
    </head>
    <body>
     <div class="container">
@@ -50,7 +50,7 @@
             <p>We use advanced encryption and regularly audit our systems to ensure your personal data remains secure. Access to your information is strictly limited to authorized personnel involved in AI development and platform management.</p>
         
             <h2>Your Rights</h2>
-            <p>You have the right to access, update, or delete your personal data at any time. You can also request a download of all the data we have collected about you. To exercise these rights, contact our support team at <a href='mailto:support@picquest.com'>support@picquest.com</a></p>
+            <p>You have the right to access, update, or delete your personal data at any time. You can also request a download of all the data we have collected about you. To exercise these rights, contact our support team at <a href='mailto:support@picquest.online'>support@picquest.online</a></p>
         
             <h2>Data Retention</h2>
             <p>We retain your personal information for the duration of your account’s activity or as needed to provide our services. Once your account is deleted, we remove all personally identifiable information unless legally required to retain it.</p>
@@ -58,7 +58,7 @@
             <h2>Changes to This Policy</h2>
             <p>We may periodically update this Privacy Policy. Any significant changes will be communicated to you via email or posted on this page. Please review this page regularly to stay informed.</p>
         
-            <p>For any inquiries or concerns regarding our privacy practices, please contact us at <a href='mailto:privacy@picquest.com'>privacy@picquest.com</a></p>
+            <p>For any inquiries or concerns regarding our privacy practices, please contact us at <a href='mailto:privacy@picquest.online'>privacy@picquest.online</a></p>
 
             <br/><br/><br/>
         </div>
