:construction_worker: updates :children_crossing:  FUCK U :recycle:

--- a/template/home.html
+++ b/template/home.html
@@ -27,6 +27,7 @@
         </div>
         <div id="about" class="content" style="text-align: center;">
             <p>At Pic Quest, we’re creating an interactive platform where users actively train our AI by completing engaging tasks. We provide users with specific instructions, and they respond by uploading images that serve as answers. This collaboration ensures that our AI learns from real-world examples to become smarter and more accurate in understanding visual data. Our platform is designed for users who have the knowledge and expertise to contribute meaningfully, ensuring that our AI grows without the risk of being misinformed. Join us at Pic Quest and be a part of shaping the future of intelligent technology!</p>
+            <p>Contact us at <a href="mailto:support@picquest.online">support@picquest.online</a><br/>Chat with us at <a href="https://t.me/picquest_online">t.me/picquest_online</a></p>
 
             <br/><br/><br/>
         </div>
@@ -63,7 +64,7 @@
         </div>
         <div id="reward" class="content">
             <h2>Earn Rewards for Training Our AI – Your Knowledge Pays Off!</h2>
-            <p>At Pic Quest, your expertise is highly valued, and we believe in rewarding you for every contribution. By completing tasks and uploading images, you earn a monetary reward. Each task carries a specific value, starting at $0.5 per task, with your total earnings increasing as you complete more tasks and help train our AI.</p>
+            <p>At Pic Quest, your expertise is highly valued, and we believe in rewarding you for every contribution. By completing tasks and uploading images, you earn a monetary reward. Each task carries a specific value, starting at $0.7 per task, with your total earnings increasing as you complete more tasks and help train our AI.</p>
             
             <h3>How It Works</h3>
             <ol>
