:construction: upd :wheelchair: ates :sparkles:

--- a/template/home.html
+++ b/template/home.html
@@ -16,16 +16,13 @@
     <div class="container">
         <nav class="navbar">
             <ul>
-                <li><a href="#tasks" data-target="tasks">Tasks</a></li>
-                <li><a href="#about" data-target="about">About</a></li>
+                <li><a href="#home" data-target="home">About</a></li>
                 <li><a href="#terms" data-target="terms">Terms</a></li>
                 <li><a href="#reward" data-target="reward">Reward</a></li>
+                <li><a href="#tasks" data-target="tasks">Tasks</a></li>
             </ul>
         </nav>
         <div id="home" class="content active" style="text-align: center;">
-            <p>Train Our AI by Completing Engaging Image Tasks – Earn Rewards and Shape the Future of Intelligent Technology!</p>
-        </div>
-        <div id="about" class="content" style="text-align: center;">
             <p>At Pic Quest, we’re creating an interactive platform where users actively train our AI by completing engaging tasks. We provide users with specific instructions, and they respond by uploading images that serve as answers. This collaboration ensures that our AI learns from real-world examples to become smarter and more accurate in understanding visual data. Our platform is designed for users who have the knowledge and expertise to contribute meaningfully, ensuring that our AI grows without the risk of being misinformed. Join us at Pic Quest and be a part of shaping the future of intelligent technology!</p>
             <p>Contact us at <a href="mailto:support@picquest.online">support@picquest.online</a><br/>Chat with us at <a href="https://t.me/picquest">t.me/picquest</a></p>
 
